with pretty pics

--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -16,6 +16,11 @@
 \jafpsh{res/gold_127_s4_z.pdf}{RTM-Aufnahme ($\SI{200}{\nano\meter}$, z-Darstellung) von Goldprobe 1 mit Spitze \ref{fig:spitze_4_scaled.pdf}. Aufnahmeparameter: $P=1000, I=2000, I_\text{Setpoint}=\SI{1}{\nano\A}$, $v_R=\SI{200,2}{\nano\meter\per\s}$.}{0.45}
 
 
-\section{RTM-Aufnahmen der HOPG Probe}
+\section{RTM-Aufnahmen der HOPG-Probe}
 
-\jafpsh{res/hopg_165}{$v_R = \SI{157.19}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{751}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
+\jafpsh{res/hopg_165}{RTM-Aufnahme ($\SI{4.4}{\nano\meter}$, Stromdarstellung), $v_R = \SI{157.19}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{751}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
+
+\section{RTM-Aufnahmen der \moszwei-Probe}
+
+\jafpsh{res/mos2_169.pdf}{RTM-Aufnahme ($\SI{68}{\nano\meter}$, z-Darstellung), $v_R = \SI{340.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
+\jafpsh{res/mos2_171.pdf}{RTM-Aufnahme ($\SI{9.82}{\nano\meter}$, z-Darstellung), $v_R = \SI{49.1}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
