--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -2,15 +2,15 @@
 Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) ist eine Kristallstruktur aus Molybdän- und Schwefelatomen, welche ähnlich wie HOPG eine schichtartige Struktur aufweist, bei welcher die einzelnen Schichten nur durch Van-der-Vaals Kräfte zusammengehalten werden. Die Kristallstruktur innerhalb einer Schicht ist in der Regel hexagonal. Hierbei sind an der Oberfläche Schwefelatome, welche gleichseitige Dreiecke mit einem Abstand der benachbarten Atome von $d = \SI{0.31604}{nm}$ bilden, die dominant messbare Struktur \cite{mos2structure}. Die Struktur ist in den Abbildungen \ref{fig:mos2_crystal.pdf},\ref{fig:mos2_structure} dargestellt.
 
 \jafps{mos2_crystal.pdf}{Darstellung der Kristallstruktur einer Schicht \moszwei. Abbildung modifiziert aus \cite{mos2fig}}{0.4}
-\jafps{mos2_structure}{Abbildung modizifiert aus \cite{mos2_crystal}}{0.4}
+\jafps{mos2_structure}{3D-Darstellung der Kristallstruktur \moszwei, die Dreiecksstruktur ist hier gut sichtbar. Abbildung modizifiert aus \cite{mos2_crystal}}{0.4}
 
 \section{Durchführung}
-Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert (also die oberste Schicht abgezogen) um eine saubere, möglichst glatte und intakte Fläche zum messen zu haben. Dann wird ein großes Übersichtsbild im CCM erstellt und eine ausreichend glatte, kleinere Stelle gesucht. Ein geeigneter kleinerer Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden \todo{refrence}.
+Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert (also die oberste Schicht abgezogen) um eine saubere, möglichst glatte und intakte Fläche zum messen zu haben. Dann wird ein großes Übersichtsbild im CCM erstellt und eine ausreichend glatte, kleinere Stelle gesucht. Ein geeigneter kleinerer Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden (Abb. \ref{res/mos2_169.pdf}, \ref{res/mos2_171.pdf}).
 Es werden Messungen eines kleinen, ebenen Bereichs im CHM angefertigt, zu sehen in Abbildung \ref{fig:res/mos2_197}. In diese Messung werden nun mit gwyddion \cite{gwyddion} Gitterabstände eingezeichnet und vermessen. Diese Messungen der Abstände sind in der Abbildung \ref{fig:res/mos2_lattice_197} und in Tabelle \ref{tab:mos_lattice} dargestellt.
 
 Die Abstände wurde für jeweils drei Atome gemessen, sodass die Unsicherheit insgesamt kleiner wird. Die drei Richtungen werden wieder seperat behandelt. Man berechnet dann die mittleren Abstände und Winkel, aufgelistet in Tabelle \ref{tab:mos_lattice_avg}.
 
-\jafps{res/mos2_197}{\todo{caption}}{0.4}
+\jafps{res/mos2_197}{RTM-Aufnahme ($\SI{2.09}{\nano\meter}$, Stromdarstellung), $v_R = \SI{41.8}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
 \jafps{res/mos2_lattice_197}{Ausschnitt von Abbildung \ref{fig:res/mos2_197}, mit eingezeichnetem Gitter.}{0.4}
 
 \begin{table}[H]
@@ -33,7 +33,7 @@ Die Abstände wurde für jeweils drei Atome gemessen, sodass die Unsicherheit in
 		10    & $ \num{5(2)}$              & $ \num{0.93(3)}$         \\
 		\hline
 	\end{tabular}
-	\caption{Längen L und Winkel $\varphi $der in Abbildung \ref{fig:res/mos2_lattice_197} eingezeichneten Linien. Die Unsicherheit ergibt sich aus der Ableseungenauigkeit beim visuellen Suchen der Grenzen der einzelnen Atome. Die Linien wurden zum besseren Mitteln jeweils über den dreifachen Atomabstand gezogen.}
+	\caption{Längen L und Winkel $\varphi$ der in Abbildung \ref{fig:res/mos2_lattice_197} eingezeichneten Linien. Die Unsicherheit ergibt sich aus der Ableseungenauigkeit beim visuellen Suchen der Grenzen der einzelnen Atome. Die Linien wurden zum besseren Mitteln jeweils über den dreifachen Atomabstand gezogen.}
 	\label{tab:mos_lattice}
 \end{table}
 
