--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -324,3 +324,10 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     year = {2003},
     doiurl = {https://doi.org/10.1073/pnas.2134173100},
 }
+
+@misc{docs,
+    title = {Gwyddion user guide},
+    author = {Petr Klapetek, David Necas and Christopher Anderson},
+    url = {https://gwyddion.net/download/user-guide/gwyddion-user-guide-en.pdf},
+    urldate = {2025-12-08},
+}
