--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -22,5 +22,5 @@
 
 \section{RTM-Aufnahmen der \moszwei-Probe}
 
-\jafpsh{res/mos2_169.pdf}{RTM-Aufnahme ($\SI{68}{\nano\meter}$, z-Darstellung), $v_R = \SI{340.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
-\jafpsh{res/mos2_171.pdf}{RTM-Aufnahme ($\SI{9.82}{\nano\meter}$, z-Darstellung), $v_R = \SI{49.1}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
+\jafpsh{res/mos2_169}{RTM-Aufnahme ($\SI{68}{\nano\meter}$, z-Darstellung), $v_R = \SI{340.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
+\jafpsh{res/mos2_171}{RTM-Aufnahme ($\SI{9.82}{\nano\meter}$, z-Darstellung), $v_R = \SI{49.1}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
