--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -27,7 +27,7 @@ Nun werden Aufnahmen mit atomarer Auflösung hergestellt (siehe \ref{fig:res/hop
 \section{Auswertung}
 
 
-In den Aufnahmen erwarten wir entsprechend Abbildung \ref{fig:graphit_gitter}, ein Muster gleichseitiger Dreiecke mit Seitenlänge $\SI{0.246}{\nano\meter}$ \cite{graphite}. Dieses Muster ist in den Aufnahmen (\ref{fig:hopg_166_with_lines}, \ref{fig:res/hopg_165}) optisch zu erkennen, die Gleichseitigkeit der Dreiecke wird im folgenden überprüft.
+In den Aufnahmen erwarten wir entsprechend Abbildung \ref{fig:graphit_gitter}, ein Muster gleichseitiger Dreiecke mit Seitenlänge $\SI{0.246}{\nano\meter}$ \cite{graphite}. Dieses Muster ist in den Aufnahmen (\ref{fig:res/hopg_166_with_lines}, \ref{fig:res/hopg_165}) optisch zu erkennen, die Gleichseitigkeit der Dreiecke wird im folgenden überprüft.
 
 Eine gelungene Aufnahme wird nun genutzt um dort den Abstand mehrerer Maxima zueinander zu vermessen. Hierzu wurde die Mess-Funktionalität von gwyddion \cite{gwyddion} verwendet.
 
