--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -5,7 +5,7 @@ Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) is
 \jafps{mos2_structure}{3D-Darstellung der Kristallstruktur \moszwei, die Dreiecksstruktur ist hier gut sichtbar. Abbildung modizifiert aus \cite{mos2_crystal}}{0.4}
 
 \section{Durchführung}
-Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert (also die oberste Schicht abgezogen) um eine saubere, möglichst glatte und intakte Fläche zum messen zu haben. Dann wird ein großes Übersichtsbild im CCM erstellt und eine ausreichend glatte, kleinere Stelle gesucht. Ein geeigneter kleinerer Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden (Abb. \ref{res/mos2_169.pdf}, \ref{res/mos2_171.pdf}).
+Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert (also die oberste Schicht abgezogen) um eine saubere, möglichst glatte und intakte Fläche zum messen zu haben. Dann wird ein großes Übersichtsbild im CCM erstellt und eine ausreichend glatte, kleinere Stelle gesucht. Ein geeigneter kleinerer Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden (Abb. \ref{fig:res/mos2_169}, \ref{fig:res/mos2_171}).
 Es werden Messungen eines kleinen, ebenen Bereichs im CHM angefertigt, zu sehen in Abbildung \ref{fig:res/mos2_197}. In diese Messung werden nun mit gwyddion \cite{gwyddion} Gitterabstände eingezeichnet und vermessen. Diese Messungen der Abstände sind in der Abbildung \ref{fig:res/mos2_lattice_197} und in Tabelle \ref{tab:mos_lattice} dargestellt.
 
 Die Abstände wurde für jeweils drei Atome gemessen, sodass die Unsicherheit insgesamt kleiner wird. Die drei Richtungen werden wieder seperat behandelt. Man berechnet dann die mittleren Abstände und Winkel, aufgelistet in Tabelle \ref{tab:mos_lattice_avg}.
