--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -12,16 +12,14 @@ Rastertunnelmikroskopie nutzt das Phänomen des messbaren, ortsabhängigen Elekt
 \subsection{Tunnelstrom}
 
 Bei klassischer Betrachtung wird überhaupt kein Tunnelstrom erwartet, da Elektronen aus leitfähigen Materialien, mit Energien unterhalb des Betrags einer Potentialbarriere $E < V$ sich niemals innerhalb oder hinter der Barriere aufhalten können. In der quantenmechanischen Betrachtung von Elektronen als Wellenfunktion gibt es jedoch eine nichtverschwindene Wahrscheinlichkeit, dass sich ein Elektron auch im Bereich der Barriere oder dahinter aufhält.
-Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren Tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \cite[707-709]{gerthsen}
-
-Bei klassischer Betrachtung wird überhaupt kein Tunnelstrom erwartet, da Elektronen aus leitfähigen Materialien, mit Energien unterhalb des Betrags einer Potentialbarriere $E < V$ sich niemals innerhalb oder hinter der Barriere aufhalten können. In der quantenmechanischen Betrachtung von Elektronen als Wellenfunktion gibt es jedoch eine nichtverschwindene Wahrscheinlichkeit, dass sich ein Elektron auch im Bereich der Barriere oder dahinter aufhält.
+Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \cite[707-709]{gerthsen}
 
 
 %Grundsätzlich nutzt ein RTM diesen quantenmechanischen Tunneleffekt, sowie feine Positionierung über Piezokristalle, aus um die Oberfläche einer Probe mit einer atomar dünnen Spitze abzurastern und Daten über ihre Struktur zu messen.
 % \subsection{Tunnelstrom}
 % Bei quantenmechanischer Betrachtung können Teilchen durch Potentialbarrieren Tunneln, die bei klassischer Betrachtung das Teilchen stoppen sollten. \todo{cite this}
 
-Der resultierende Tunnelstrom ist hängt exponentiell vom Abstand ab und ist sehr empfindlich bei Änderungen in den Größenordnungen weniger Angström. Es gilt die folgende Proportionalität \cite{binnigSTM}:
+Der resultierende Tunnelstrom hängt exponentiell vom Abstand ab und ist sehr empfindlich schon bei Änderungen in den Größenordnungen weniger Angström. Es gilt die folgende Proportionalität \cite{binnigSTM}:
 
 \begin{align}
 	I \propto U_T \exp(-A \Phi^{1/2} z)
