--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -31,14 +31,14 @@ Wobei z der Abstand von Spitze zu Probe darstellt. \todo{geschlossene form für 
 
 
 \subsection{Piezoeffekt}
-Der Piezoeffekt beschreibt den Zusammenhang zwischen elektrischer Spannung und Verformung von Materialien mit polaren Achsen.
+Der Piezoeffekt beschreibt den Zusammenhang zwischen elektrischer Spannung und Verformung von Materialien mit polaren Achsen, z.B. sogenannte Piezokristalle. Verformt man diese, wird ein dazu proportionales elektrisches Feld erzeugt, da der Effekt umkehrbar ist, kann auch durch Anlegung einer elektrischen Spannung eine Verformung des Kristalls in einer definierten Richtung erfolgen.
 Dieser Zusammenhang ist näherungsweise linear;
 
 \begin{align}
 	\Delta x = \delta U
 \end{align}
-
-Dieser Effekt ist in der Größenordnung von $10^{-11} - 10^{-9} \unit{\meter\per\volt}$ und erlaubt somit relativ einfach Positionsregelung auf atomaren Größenskalen. \cite[339-341]{gerthsen}
+Hierbei heißt $delta$ der piezoelektrische Koeffizient und ist abhängig vom Material und der Polung der angelegten Spannung bzw. Richtung der wirkenden Deformationskraft.
+Dieser Effekt ist in der Größenordnung von $10^{-11} - 10^{-9} \unit{\meter\per\volt}$ und erlaubt somit relativ einfach Positionsregelung auf atomaren Größenskalen. \cite[339-340]{gerthsen}
 
 
 \input{skizze_rtm.tikz}
