fazit and refrence to raw data in mos2 chapter

--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -10,7 +10,7 @@ Es werden Messungen eines kleinen, ebenen Bereichs im CHM angefertigt, zu sehen 
 
 Die Abstände wurde für jeweils drei Atome gemessen, sodass die Unsicherheit insgesamt kleiner wird. Die drei Richtungen werden wieder seperat behandelt. Man berechnet dann die mittleren Abstände und Winkel, aufgelistet in Tabelle \ref{tab:mos_lattice_avg}.
 
-\jafps{res/mos2_197}{RTM-Aufnahme ($\SI{2.09}{\nano\meter}$, Stromdarstellung), $v_R = \SI{41.8}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
+\jafps{res/mos2_197}{RTM-Aufnahme ($\SI{2.09}{\nano\meter}$, Stromdarstellung), $v_R = \SI{41.8}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=0$, $I=4$ (nicht korrigierte Version dieser Abbildung siehe Abbildung \ref{fig:res/mos2_197_raw})}{0.4}
 \jafps{res/mos2_lattice_197}{Ausschnitt von Abbildung \ref{fig:res/mos2_197}, mit eingezeichnetem Gitter.}{0.4}
 
 \begin{table}[H]
@@ -54,6 +54,6 @@ Die Abstände wurde für jeweils drei Atome gemessen, sodass die Unsicherheit in
 \end{table}
 
 Die so bestimmten Gitterabstände aus Tabelle \ref{tab:mos_lattice_avg} weichen jeweils geringfügig vom erwarteten Wert $d = \SI{0.31604}{\nano\meter}$ ab. Da der Gitterabstand der Kristallstruktur von \moszwei in alle Raumrichtungen gleich groß ist, ist es zudem noch sinnvoll den Mittelwert der drei Richtungen zu betrachten. Hierbei ergibt sich dann ein Wert von $\bar{L} = \SI{0.30(1)}{\nano\meter}$, was innerhalb einer $1\sigma$ Umgebung des Erwartungswerts liegt.
-Man findet weiterhin die Winkel zwischen den Gruppen A, B und C als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = \SI{74(1)}{\degree}$, $\Delta\varphi_{A, C} = \SI{56(1)}{\degree}$ und $\Delta\varphi_{B, C} = \SI{50(1)}{\degree}$. Hier ist eine deutliche Abweichung von dem erwarteten $\Delta\varphi_x = \SI{60}{\degree}$ (für ein gleichseitiges Dreieck) festzustellen. Es fällt weiterhin auf, dass die Länge in Richtung A (vgl. Tabelle \ref{tab:mos_lattice_avg}) kleiner als der Erwartungswert, die in Richtung C größer (wenngleich noch in einer $1\sigma$ Umgebung zum Erwartungswert) sind. Auch ist in den unkorrigierten Messdaten \todo{referenzieren} eine insgesamte Schieflage zu erkennen. Dies passt insofern gut zusammen, da eine Aufnahme, nicht aus der Flächennormalen die Winkel und Längen verzerrt. Im Fall der Gitterabstände hat dies hier keine wichtige Auswirkung, da die Änderung zum einen klein ist, zum anderen die A Richtung gestaucht und die C Richtung gestreckt wird, was im Mittel wieder ein gutes Ergebnis liefert.
+Man findet weiterhin die Winkel zwischen den Gruppen A, B und C als $\Delta\varphi_{A, B} = |\varphi_A - \varphi_B| = \SI{74(1)}{\degree}$, $\Delta\varphi_{A, C} = \SI{56(1)}{\degree}$ und $\Delta\varphi_{B, C} = \SI{50(1)}{\degree}$. Hier ist eine deutliche Abweichung von dem erwarteten $\Delta\varphi_x = \SI{60}{\degree}$ (für ein gleichseitiges Dreieck) festzustellen. Es fällt weiterhin auf, dass die Länge in Richtung A (vgl. Tabelle \ref{tab:mos_lattice_avg}) kleiner als der Erwartungswert, die in Richtung C größer (wenngleich noch in einer $1\sigma$ Umgebung zum Erwartungswert) sind. Auch ist in den unkorrigierten Messdaten (vgl. Abbildung \ref{fig:res/mos2_197_raw}) eine insgesamte Schieflage zu erkennen. Dies passt insofern gut zusammen, da eine Aufnahme, nicht aus der Flächennormalen die Winkel und Längen verzerrt. Im Fall der Gitterabstände hat dies hier keine wichtige Auswirkung, da die Änderung zum einen klein ist, zum anderen die A Richtung gestaucht und die C Richtung gestreckt wird, was im Mittel wieder ein gutes Ergebnis liefert.
 
 Qualitativ ist für die atomaren Aufnahmen von \moszwei noch anzumerken, dass die Atome eine relativ große Ausdehnung haben, was das exakte Vermessen der Gitterstruktur erschwert. Hierbei mag es sinnvoll, sein mit geringerem Abstand der Spitze zur Probe Messungen durchzuführen (Setpoint des Stroms größer und/oder Tunnelspannung kleiner setzen) um so die Lokalisation der Gitteratome genauer zu ermöglichen. Im Versuch wurde dies aufgrund der zeitlichen Einschränkung nicht mehr durchgeführt; auch die vorhandenen Ergebnisse sind allerdings schon eine relativ gute Annäherung an die Literaturwerte und zeigen das gute Auflösungsvermögen des RTMs selbst bei diesem größeren Spitzenabstand.
