--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -24,3 +24,5 @@
 
 \jafpsh{res/mos2_169}{RTM-Aufnahme ($\SI{68}{\nano\meter}$, z-Darstellung), $v_R = \SI{340.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
 \jafpsh{res/mos2_171}{RTM-Aufnahme ($\SI{9.82}{\nano\meter}$, z-Darstellung), $v_R = \SI{49.1}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
+
+\jafpsh{res/mos2_197_raw}{Gleiche Aufnahme wie \ref{fig:res/mos2_197}, allerdings ohne Korrektur der Schieflage.}{0.4}
