--- a/422-raster-tunnel-mikroskopie/latex/fazit.tex
+++ b/422-raster-tunnel-mikroskopie/latex/fazit.tex
@@ -1,8 +1,9 @@
 \chapter{Fazit}
-Die Darstellung von aufgedampften Goldkugeln ist insgesamt gut gelungen. Zunächst musste sowohl das Spitzen reissen als auch die Nutzung des RTM geübt werden. Nachdem einmal eine gut funktionierende Spitze gerissen worden war (siehe Abbildung \ref{fig:spitze_4_scaled.pdf}) ließen sich beide Golproben darstellen. Die Gold auf Saphir Probe konnte gut dargestellt werden mit klar erkennbaren Goldflocken (vergleiche Abbildungen \ref{fig:res/gold_126_s4.pdf}, \ref{fig:res/gold_129_s4.pdf} und \ref{fig:res/gold_126_s4.pdf}). Die zweite Goldprobe wurde ebenfalls dargestellt (Abbildung \ref{fig:res/gold2_130_s4_.pdf}), wenngleich hierbei einige Bildfehler aufgetreten sind. Mögliche Ursachen für diese sind ein Suboptimal eingestellter Regelkreis, Setpoint oder Tunnelspannung oder gegebenenfalls ein Staubkorn auf der Probe (da diese Bildfehler nur an einer Stelle und nur bei der zweiten Goldprobe aufgetreten sind ist dies hierbei die wahrscheinlichere Ursache).
+Die Darstellung von aufgedampften Goldkugeln ist insgesamt gut gelungen. Zunächst musste sowohl das Spitzen reissen als auch die Nutzung des RTM geübt werden. Nachdem einmal eine gut funktionierende Spitze gerissen worden war (siehe Abbildung \ref{fig:spitze_4_scaled.pdf}), ließen sich beide Goldproben darstellen. Die Gold auf Saphir-Probe konnte gut dargestellt werden mit klar erkennbaren Goldflocken (vergleiche Abbildungen \ref{fig:res/gold_126_s4.pdf}, \ref{fig:res/gold_129_s4.pdf} und \ref{fig:res/gold_126_s4.pdf}). Die zweite Goldprobe wurde ebenfalls dargestellt (Abbildung \ref{fig:res/gold2_130_s4.pdf}), wobei hierbei einige Bildfehler aufgetreten sind. Mögliche Ursachen für diese sind ein suboptimal eingestellter Regelkreis, Setpoint oder Tunnelspannung oder ein Staubkorn auf der Probe, am wahrscheinlichsten ist dabei letzteres. Aus den gelungenen Aufnahmen kann auf ein gut kalibriertes RTM geschlossen werden.
 
-Im Folgenden ist die Kristallstruktur von HOPG visualisiert und vermessen worden. Dies hat zufriedenstellend funktioniert, die Gitterkonstante wurde bei einem Erwartungswert von $\SI{0.246}{\nano\meter}$ bestimmt als $L_1 = \SI{0.251(4)}{\nano\meter}$ und $L_2 = \SI{0.254(4)}{\pico\meter}$ für verschiedene Richtungen. Die Werte passen gut zueinander und mindestens in einer $2\sigma$Umgebung auch zu dem Erwartungswert. Die Winkel entsprachen den erwarteten Winkeln bei der HOPG Struktur.
-
+Im Folgenden ist die Kristallstruktur von HOPG visualisiert und vermessen worden. Dies hat zufriedenstellend funktioniert, die Gitterkonstante wurde bei einem Erwartungswert von $\SI{0.246}{\nano\meter}$ bestimmt als $L_1 = \SI{0.251(4)}{\nano\meter}$ und $L_2 = \SI{0.254(4)}{\pico\meter}$ für verschiedene Richtungen. Die Werte passen gut zueinander und in einer $2\sigma$-Umgebung oder besser auch zu dem Erwartungswert. Die Winkel entsprachen den erwarteten Winkeln bei der HOPG Struktur, was für eine gute Einstellung der Piezosteuerungselemente spricht.
 Somit konnte zum einen die Kristallstruktur von HOPG nachvollzogen als auch die Kalibration des RTM überprüft werden.
 
-Zuletzt wurde noch ein \moszwei Probe vermessen. Erwartet wurde hier, die Struktur der Schwefelatome an der Oberfläche des Kristalls zu messen, welche ähnlich wie beim HOPG als Eckpunkte von gleichseitigen Dreiecken sichtbar sein sollten. Hierbei wurde eine Kantenlänge von $d = \SI{0.31604}{nm}$ erwartet.  Visuell konten die Oberflächenatome gut dargestellt werden, beim vermessen ergaben sich allerdings leicht verzerrte Dreiecksstrukturen mit Innenwinkeln von $\varphi_i \in \{\SI{74(1)}{\degree}, \SI{56(1)}{\degree}, \SI{50(1)}{\degree}\}$. Die mittlere Kantenlänge war mit $\bar{L} = \SI{0.30(1)}{\nano\meter}$ in einer $2\sigma$Umgebung zu dem Erwartungswert. Insgesamt deutet dies auf eine an sich korrekte Darstellung der Struktur hin, wobei vermutlich eine leichte Schieflage der Oberfläche (relativ zu der Z-Richtung) die Ursache der Verzerrung ist.
+Zuletzt wurde noch eine \moszwei-Probe vermessen. Erwartet wurde hier, die Struktur der Schwefelatome an der Oberfläche des Kristalls zu messen, welche ähnlich wie beim HOPG als Eckpunkte von gleichseitigen Dreiecken sichtbar sein sollten. Hierbei wurde eine Kantenlänge von $d = \SI{0.31604}{nm}$ erwartet.  Visuell konten die Oberflächenatome gut dargestellt werden, beim Vermessen ergaben sich allerdings leicht verzerrte Dreiecksstrukturen mit Innenwinkeln von $\varphi_i \in \{\SI{74(1)}{\degree}, \SI{56(1)}{\degree}, \SI{50(1)}{\degree}\}$. Die mittlere Kantenlänge war mit $\bar{L} = \SI{0.30(1)}{\nano\meter}$ in einer $2\sigma$-Umgebung zum Erwartungswert. Insgesamt deutet dies auf eine an sich korrekte Darstellung der Struktur hin, wobei vermutlich eine leichte Schieflage der Oberfläche (relativ zur z-Richtung) die Ursache der Verzerrung ist.
+
+Insgesamt konnte im Versuch die Funktionsweise des RTM demonstriert werden und die Strukturen von HOPG und \moszwei weitgehend erfolgreich vermessen werden.
