--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -49,5 +49,6 @@ Die Aufnahmen wurden wie oben erläutert alle im CCM aufgenommen.
 Die Aufnahmen der Goldproben weisen wie erwartet eine raue Struktur auf. Es sind auf den Aufnahmen der ersten Probe wolkenförmige, nicht ganz runde Strukturen mit für sich jeweils recht ebener Oberfläche zu erkennen. Es ist hier immer das Höhenbild dargestellt. Man erkennt verschieden große Goldflocken. In Abbildung \ref{fig:res/gold_126_s4.pdf} gibt auch noch kleinere Bereiche mit helleren (höheren) Flecken, dies könnte entweder von kleineren Goldflocken oder (ggf. durch das Erhitzen hervorgerufenen) Stufen (siehe Abschnitt \ref{sec:theoriegold} stammen. Messungenauigkeiten durch eine nicht-ideale, d.h. nicht einatomige, Spitze sind allerdings hier auch denkbar als Ursache.
 Insgesamt ist auf den Aufnahmen der ersten Goldprobe eine Struktur zu erkennen, die darauf hinweist, dass die Probe aus Gold und Saphir bestand. Vergleiche hierzu auch die Referenzaufnahme zu Gold auf Saphir in \cite[13]{Versuchsanleitung422}, die eine ähnliche Struktur aufweist.
 
-Die Aufnahme der zweiten Probe weist auffallend im unteren Bildteil eine Stufe auf. Hierbei handelt es sich vermutlich um einen Messfehler.
+Die Aufnahme der zweiten Probe weist auffallend im unteren Bildteil eine Stufe auf. Hierbei handelt es sich vermutlich um einen Messfehler. Mögliche Ursachen für diesen sind ein nicht optimal eingestellter Regelkreis, ungünstig gesetzte Werte für den Setpoint (Vergleichswert für den Tunnelstrom, der durch Ausgleich der Höhe erreicht werden soll) oder die Tunnelspannung oder gegebenenfalls auch ein Staubkorn auf der Probe. Da diese Bildfehler nur an einer Stelle und nur bei der zweiten Goldprobe aufgetreten sind ist letzteres hierbei die wahrscheinlichere
+Ursache.
 Daher wird dieser Bereich der Probe nicht weiter beachtet und nur der obere Teil untersucht. Hier ist eine deutlich homogenere Struktur zu erkennen als bei den Aufnahmen der ersten Goldprobe. Dies deutet darauf hin dass es sich hier um eine Aufnahme von Gold auf Silizium handelt. Die Kügelchen konnten hier nicht einzeln aufgelöst werden. Für eine Verbesserung der Auflösung wäre eine CHM Aufnahme eines kleinen Teilstücks des Bildausschnitts sinnvoll. Eine Aufnahme im CHM führt in der Regel zu besserer Auflösung der tatsächlichen Oberflächenstruktur, da Resonanzen und Störeffekte des Regelkreises so stark reduziert werden können. Um die eingebaute Spitze zu schonen, wurde für diese Probe jedoch auf eine solche Aufnahme verzichtet. Die gemachten Bilder, insbesondere von der ersten Probe, zeigen insgesamt ein gut funktionierendes RTM.
