--- a/422-raster-tunnel-mikroskopie/latex/hopg.tex
+++ b/422-raster-tunnel-mikroskopie/latex/hopg.tex
@@ -2,7 +2,7 @@
 
 Highly Ordered Pyrolitic Graphite (HOPG) ist ein Kristall, bestehend aus Schichten von jeweils hexagonal angeordneten Kohlenstoffatomen. Die Schichten sind zueinander verschoben, sodass jeweils die Hälfte der Kohlenstoffatome über solchen aus der nächsten Lage liegen und die andere Hälfte über entsprechenden Hohlstellen \cite{graphite}. Dies ist skizziert in Abbildung \ref{fig:graphit_gitter}.
 
-\jafps{graphit_gitter}{Schematische Darstellung der Kristallstruktur von HOPG\cite{hopg_sketch}}{0.4}
+\jafps{graphit_gitter}{Schematische Darstellung der Kristallstruktur von HOPG, Abbildung aus \cite{hopg_sketch}}{0.4}
 
 Die Schichten zueinander sind nur schwach über Van-der-Vaals Kräfte gebunden, innerhalb der Brücken sind die Kohlenstoffatome kovalent, also deutlich stärker gebunden \cite{graphite}. Dies wird beim Vorbereiten der Probe ausgenutzt, da es erlaubt, ganze Schichten relativ leicht abzulösen während diese in sich jeweils intakt bleiben.
 
@@ -57,5 +57,5 @@ Zum besseren Mitteln wurde jeweils der Abstand von fünf Maxima bestimmt. Außer
 \end{table}
 
 Die Werte in Tabelle \ref{tab:hopg_measure} lassen sich in zwei Gruppen aufspalten, die den zwei Richtungen entsprechen, in denen die Kohlenstoffatome in Reihen liegen. Für jede Richtung wird jetzt der Mittelwert des Abstands zwischen je zwei Maxima berechnet, die Unsicherheit wird mittels Gaußscher Fehlerfortpflanzung berechnet\cite[8-9]{gerthsen}. Es ergibt sich für die erste Richtung (repräsentiert durch die Linien 1, 2, 6) ein mittlerer Winkel von $\varphi_1 = \SI{161(1)}{\degree}$ und ein Abstand von $L_1 = \SI{0.251(4)}{\nano\meter}$. Die selben Berechnungen für die zweite Gruppe (aus Linie 3, 4 und 5) ergeben $\varphi_2 = \SI{40(1)}{\degree}$ und $L_2 = \SI{0.254(4)}{\pico\meter}$.
-Die Gitterabstände $L_1$ und $L_2$ sind zueinander konsisten und liegen innerhalb einer Standardabweichung zueinander. Der Erwartete Gitterabstand $d=\SI{0.246}{\nano\meter}$ liegt in einer $2\sigma$-Umgebung zu dem Messwert. Der Winkelunterschied beträgt $\Delta\varphi = \SI{121(1)}{\degree}$, was dem erwarteten Außenwinkel eines gleichseitigen Dreiecks ($\SI{120}{\degree}$) gut entspricht. Somit konnte sowohl die Winkel als auch Abstände des HOPG Kristallgitters gemessen werden, wenngleich bei den Gitterabständen nur eine übereinstimmung innerhalb einer $2\sigma$-Umgebung zu vorliegt.
+Die Gitterabstände $L_1$ und $L_2$ sind zueinander konsistent und liegen innerhalb einer Standardabweichung zueinander. Der erwartete Gitterabstand $d=\SI{0.246}{\nano\meter}$ liegt in einer $2\sigma$-Umgebung zu dem Messwert. Der Winkelunterschied beträgt $\Delta\varphi = \SI{121(1)}{\degree}$, was dem erwarteten Außenwinkel eines gleichseitigen Dreiecks ($\SI{120}{\degree}$) gut entspricht. Somit konnte sowohl die Winkel als auch Abstände des HOPG Kristallgitters gemessen werden, wenngleich bei den Gitterabständen nur eine Übereinstimmung innerhalb einer $2\sigma$-Umgebung zu vorliegt.
 Visuell ließ sich die elektronische Struktur von HOPG gut darstellen. Insgesamt lässt dies auf ein recht gut kalibriertes RTM schließen. Die leichten Abweichungen bei den gemessenen Längen lassen sich nicht eindeutig zuordnen, vorstellbar sind aber Hystereseeffekte der Piezoelemente oder Temperaturunterschiede zur Temperatur bei der Kalibration und dadurch veränderte elektrische oder mechanische Eigenschaften des Regelkreises oder der Piezoelemente.
