--- a/422-raster-tunnel-mikroskopie/latex/references.bib
+++ b/422-raster-tunnel-mikroskopie/latex/references.bib
@@ -331,3 +331,32 @@ url = {https://www.physics.nist.gov/PhysRefData/Handbook/Tables/xenontable2.htm}
     url = {https://gwyddion.net/download/user-guide/gwyddion-user-guide-en.pdf},
     urldate = {2025-12-08},
 }
+
+
+@article{PID_tutorial,
+  title = {Feedback for physicists: A tutorial essay on control},
+  author = {Bechhoefer, John},
+  journal = {Rev. Mod. Phys.},
+  volume = {77},
+  issue = {3},
+  pages = {783--836},
+  numpages = {0},
+  year = {2005},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.77.783},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.77.783}
+}
+
+
+@article{ieee_pid,
+  author={Kiam Heong Ang and Chong, G. and Yun Li},
+  journal={IEEE Transactions on Control Systems Technology}, 
+  title={PID control system analysis, design, and technology}, 
+  year={2005},
+  volume={13},
+  number={4},
+  pages={559-576},
+  keywords={Three-term control;Control system analysis;Hardware;Automatic control;Pi control;Proportional control;Stability;Computer simulation;Software packages;System identification;Patents;proportional-integral-derivative (PID) control;PID hardware;PID software;PID tuning},
+  doi={10.1109/TCST.2005.847331}}
+
