--- a/422-raster-tunnel-mikroskopie/latex/template.tex
+++ b/422-raster-tunnel-mikroskopie/latex/template.tex
@@ -29,6 +29,12 @@
 % \usepackage{bibtex}
 % \usepackage[backend=bibtex]{biblatex}
 
+\usepackage[headsepline=true,markcase=upper]{scrlayer-scrpage}
+\automark[chapter]{chapter}
+\ohead*{442: RASTERTUNNELMIKROSKOPIE} % outer head on even & odd pages
+\setkomafont{pagehead}{\tiny\bfseries}
+
+
 
 
 % common macros so i don't have to import packages or type too much
