--- a/422-raster-tunnel-mikroskopie/latex/mos2.tex
+++ b/422-raster-tunnel-mikroskopie/latex/mos2.tex
@@ -2,7 +2,7 @@
 Zuletzt wird noch eine \moszwei Probe untersucht. Molybdän-Sulfid (\moszwei) ist eine Kristallstruktur aus Molybdän- und Schwefelatomen, welche ähnlich wie HOPG eine schichtartige Struktur aufweist, bei welcher die einzelnen Schichten nur durch Van-der-Vaals Kräfte zusammengehalten werden. Die Kristallstruktur innerhalb einer Schicht ist in der Regel hexagonal. Hierbei sind an der Oberfläche Schwefelatome, welche gleichseitige Dreiecke mit einem Abstand der benachbarten Atome von $d = \SI{0.31604}{nm}$ bilden, die dominant messbare Struktur \cite{mos2structure}. Die Struktur ist in den Abbildungen \ref{fig:mos2_crystal.pdf},\ref{fig:mos2_structure} dargestellt.
 
 \jafps{mos2_crystal.pdf}{Darstellung der Kristallstruktur einer Schicht \moszwei. Abbildung modifiziert aus \cite{mos2fig}}{0.4}
-\jafps{mos2_structure}{3D-Darstellung der Kristallstruktur \moszwei, die Dreiecksstruktur ist hier gut sichtbar. Abbildung modizifiert aus \cite{mos2_crystal}}{0.4}
+\jafps{mos2_structure}{3D-Darstellung der Kristallstruktur von \moszwei, die Dreiecksstruktur ist hier gut sichtbar. Abbildung modizifiert aus \cite{mos2_crystal}}{0.4}
 
 \section{Durchführung}
 Das Messverfahren ist grundsätzlich gleich dem in Abschnitt \ref{sec:hopg_messung} beschriebenen. Zunächst wird die Probe mit einem Tesastreifen präperiert (also die oberste Schicht abgezogen) um eine saubere, möglichst glatte und intakte Fläche zum messen zu haben. Dann wird ein großes Übersichtsbild im CCM erstellt und eine ausreichend glatte, kleinere Stelle gesucht. Ein geeigneter kleinerer Ausschnitt wird gewählt und das Prozedere wiederholt bis ein glatter Ausschnitt mit wenigen Nanometern Kantenlänge gefunden ist. Aufnahmen von den Annäherungsschritten sind im Anhang zu finden (Abb. \ref{fig:res/mos2_169}, \ref{fig:res/mos2_171}).
